# Schroedinger

./: .clang-format  .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  Schroedinger  Schroedinger.cpp  appveyor.yml  docs.md  main.cpp  plot.py  plot2d.py
.circleci/: config.yml
Basis/: Base.h  BasisManager.cpp  BasisManager.h  ContinuousBase.cpp  DiscreteBase.cpp
World/: World.cpp
include/: Potential.h  Schroedinger.h  potentials.h  test.h
scripts/: plot2d.py  plotWithGif1D.py
src/: CMakeLists.txt  LogManager.h  Potential.cpp  Schroedinger.cpp  Schroedinger.h  main.cpp  plot.py  potentials.cpp  test.cpp  test.h
src/Basis/: Base.cpp  Base.h  BasisManager.cpp  BasisManager.h  ContinuousBase.cpp  ContinuousBase.h  Dimension.cpp  Dimension.h  DiscreteBase.cpp  DiscreteBase.h  DiscreteBaseBuilder.cpp  Initializer.cpp  Initializer.h
src/Potential/: Potential.cpp  Potential.h  PotentialBuilder.cpp
src/Schroedinger/: Schroedinger.h
src/Solver/: Numerov.cpp  Numerov.h  Schroedinger.cpp  Schroedinger.h  Solver.cpp  Solver.h
src/States/: State.cpp  State.h
src/World/: World.cpp  World.h
tests/: CMakeLists.txt  analytical.cpp  analytical.h  basis.cpp  firstTest.cpp  main.cpp  potentials.cpp  solvers.cpp  test.cpp  test.h
